--- a/user/themes/susan/scss/_header.scss
+++ b/user/themes/susan/scss/_header.scss
@@ -3,6 +3,7 @@ header {
   top: 0;
   text-align: center;
   background-color: $background-color;
+  z-index: 10;
 }
 
 .logo {
