--- a/user/themes/susan/scss/_nav.scss
+++ b/user/themes/susan/scss/_nav.scss
@@ -32,7 +32,7 @@
           display: block;
           width: 10px;
           height: 10px;
-          background-image: url('/user/themes/susan/images/star.svg')
+          // background-image: url('/user/themes/susan/images/star.svg')
         }
 
         ~ li {
